# tecs-hardware-kbc

./: .gitignore  .isort.cfg  .mailmap  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pythonpackage.yml
circular_connectors/: download_data.sh
hack/circular_connectors/: augment_policy.py  circular_connectors.ipynb  circular_connectors.py  config.py  download_data.sh  scheduler.py  task.py  thumbnail_dataset.py  utils.py
hack/cli/: analysis.py  circular_connectors.py  opamps.py  transistors.py
hack/opamps/: analysis.py  current_analysis_discrepancies.csv  current_dev_probs.csv  current_test_probs.csv  dev_discrepancies.csv  digikey_analysis.py  download_data.sh  gain_analysis_discrepancies.csv  gain_dev_probs.csv  gain_test_probs.csv  mouser_analysis.py  opamp_lfs.py  opamp_matchers.py  opamp_spaces.py  opamp_utils.py  opamps.ipynb  opamps.py  output_gain.csv
hack/transistors/: all_relations.ipynb  all_relations.py  analysis.py  analysis_discrepancies.csv  ce_v_max_dev_probs.csv  ce_v_max_test_probs.csv  compare.py  compare_cands.py  data_discrepancies.csv  dev_discrepancies.csv  digikey_analysis.py  download_data.sh  old_ce_v_max_dev_probs.csv  polarity_dev_probs.csv  polarity_test_probs.csv  transistor_lfs.py  transistors.ipynb  (+6 more)
opamps/: download_data.sh
scripts/: fig10.csv  joint.csv  plot_fig10.py  plot_joint.py  plot_opo.py  scaling_docs.sh  scaling_rels.sh
transistors/: hardware_spaces.py  transistor_lfs.py  transistor_matchers.py  transistor_throttlers.py  transistor_utils.py  transistors.ipynb  transistors.py
utils/: __init__.py  utils.py
(+103 files in other folders)
